feat: Implement all improvements from enhancement roadmap
- Security: JWT authentication, file validation, .env configuration
- Database: PostgreSQL migration guide, Alembic setup, user interaction tracking
- Monitoring: Health endpoints (/health, /ready, /live), logging configuration
- ML: Neural network personalization framework with recommendation engine
- Documentation: Complete implementation guides for all features

Features added:
- security.py: JWT token creation/verification, password hashing
- logging_config.py: Centralized logging with rotating file handlers
- file_validation.py: File upload validation, sanitization, security checks
- ml_personalization.py: User profiling, recommendation system, training pipeline
- routers/health.py: Comprehensive health/readiness endpoints
- POSTGRES_MIGRATION_GUIDE.md: Complete PostgreSQL setup guide
- ML_PERSONALIZATION_GUIDE.md: ML model training and integration
- IMPROVEMENTS_IMPLEMENTATION_GUIDE.md: Step-by-step implementation roadmap

All features documented with examples and deployment instructions.

--- a/cyber-sensei/backend/requirements.txt
+++ b/cyber-sensei/backend/requirements.txt
@@ -7,6 +7,7 @@ uvicorn[standard]
 # Database
 sqlalchemy
 alembic
+psycopg2-binary  # PostgreSQL driver
 
 # Caching & Task Queue
 redis
@@ -22,6 +23,25 @@ sentence-transformers
 openai-whisper
 ffmpeg-python
 
+# Authentication & Security
+python-jose[cryptography]
+passlib[bcrypt]
+pydantic-settings
+PyJWT
+
 # Environment & Utils
 python-dotenv
+pydantic
 pydantic-settings
+
+# File handling
+python-multipart
+aiofiles
+
+# Testing
+pytest
+pytest-asyncio
+httpx
+
+# Validation
+email-validator
