--- a/cyber-sensei/.env.example
+++ b/cyber-sensei/.env.example
@@ -1,9 +1,40 @@
-# Copy this file to .env and fill in your secret values.
+# Cyber-Sensei Environment Configuration
+# Copy this to .env and fill in your values
 
-# Required: Your OpenAI API Key for the powerful cloud model
-OPENAI_API_KEY="your_openai_api_key_here"
+# === API & Security ===
+OPENAI_API_KEY="your-openai-api-key-here"
+JWT_SECRET_KEY="your-secure-random-key-here-min-32-chars"
+JWT_ALGORITHM="HS256"
+ACCESS_TOKEN_EXPIRE_MINUTES=480
 
-# Optional: These are set by docker-compose, but can be overridden for local development
+# === Database ===
 DATABASE_URL="sqlite:///./data/cyber_sensei.db"
-REDIS_URL="redis://redis:6379/0"
-OLLAMA_BASE_URL="http://ollama:11434"
+DB_ECHO=false
+
+# === Redis & Celery ===
+REDIS_URL="redis://localhost:6379/0"
+REDIS_PASSWORD=""
+CELERY_BROKER_URL="redis://localhost:6379/0"
+CELERY_RESULT_BACKEND="redis://localhost:6379/0"
+USE_CELERY=true
+CELERY_TASK_ALWAYS_EAGER=false
+
+# === File Upload & Media ===
+MAX_FILE_SIZE=5242880
+ALLOWED_FILE_TYPES="mp4,avi,mov,mkv,pdf,docx,txt,jpg,png,gif"
+DATA_DIR="./data"
+TRANSCRIPT_DIR="./data/transcripts"
+
+# === Video Transcription ===
+WHISPER_MODEL="base"
+WHISPER_DEVICE="cpu"
+
+# === External Services ===
+OLLAMA_BASE_URL="http://localhost:11434"
+
+# === Logging & Monitoring ===
+LOG_LEVEL="INFO"
+DOCKER_ENV=false
+
+# === CORS ===
+FRONTEND_ORIGINS="http://localhost:3000,http://localhost:5173,http://127.0.0.1:3000,http://127.0.0.1:5173"
