--- a/cyber-sensei/.gitignore
+++ b/cyber-sensei/.gitignore
@@ -1,5 +1,7 @@
 # Environment variables
 .env
+.env.local
+.env.*.local
 
 # Python
 __pycache__/
@@ -9,15 +11,45 @@ __pycache__/
 .Python
 venv/
 .venv/
+env/
 
 # Database
 *.db
+*.sqlite
+*.sqlite3
+/data/
+/migrations/
 
-# Node.js (for later)
+# Node.js
 node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+dist/
+build/
 
 # Docker
 .dockerignore
+.docker/
+docker-compose.override.yml
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# Celery
+celerybeat-schedule
+dump.rdb
+
+# Logs
+*.log
+logs/
+
+# Media files
+/data/transcripts/
+/data/uploads/
+uploads/
