feat: Implement complete CRUD endpoints, ML training, advanced retry logic, and log aggregation
- Add comprehensive CRUD endpoints for all entities (Modules, Topics, Projects, Quizzes, Resources, User Progress)
- Implement TensorFlow neural network for personalized learning recommendations
- Add advanced retry logic with exponential backoff and circuit breaker pattern
- Set up Elasticsearch log aggregation with structured logging
- Create environment-aware seed data management system
- Add database migration with constraints, unique indexes, and foreign keys
- Include monitoring endpoints for metrics and recommendations
- Add comprehensive test suite for all CRUD operations
- Update requirements.txt with ML and logging dependencies

--- a/cyber-sensei/backend/requirements.txt
+++ b/cyber-sensei/backend/requirements.txt
@@ -1,4 +1,4 @@
-# backend/requirements.txt
+﻿# backend/requirements.txt
 
 # Web Framework
 fastapi
@@ -7,7 +7,7 @@ uvicorn[standard]
 # Database
 sqlalchemy
 alembic
-psycopg2-binary  # PostgreSQL driver
+psycopg2-binary
 
 # Caching & Task Queue
 redis
@@ -29,12 +29,19 @@ passlib[bcrypt]
 pydantic-settings
 PyJWT
 
-# Environment & Utils
-python-dotenv
-pydantic
-pydantic-settings
+# Machine Learning
+tensorflow>=2.13.0
+tensorflow-hub>=0.14.0
+numpy>=1.24.0
+scikit-learn>=1.3.0
 
-# File handling
+# Logging & Monitoring
+elasticsearch>=8.0.0
+python-json-logger>=2.0.0
+
+# Utils
+python-dotenv
+pydantic>=2.0.0
 python-multipart
 aiofiles
 
@@ -42,6 +49,5 @@ aiofiles
 pytest
 pytest-asyncio
 httpx
-
-# Validation
 email-validator
+python-dateutil>=2.8.0
