--- a/cyber-sensei/backend/Dockerfile
+++ b/cyber-sensei/backend/Dockerfile
@@ -6,6 +6,14 @@ ENV PYTHONDONTWRITEBYTECODE=1 \
 
 RUN apt-get update && apt-get install -y --no-install-recommends ffmpeg && \
     rm -rf /var/lib/apt/lists/*
+# backend/Dockerfile
+FROM python:3.10-slim
+
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1
+
+RUN apt-get update && apt-get install -y --no-install-recommends ffmpeg && \
+    rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
@@ -14,6 +22,10 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
+# Make prestart script executable
+RUN chmod +x /app/scripts/prestart.sh
+
 EXPOSE 8000
 
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "2", "--proxy-headers"]
+# Use the prestart script as the command
+CMD ["/app/scripts/prestart.sh"]
