--- a/cyber-sensei/backend/requirements.txt
+++ b/cyber-sensei/backend/requirements.txt
@@ -28,6 +28,7 @@ python-jose[cryptography]
 passlib[bcrypt]
 pydantic-settings
 PyJWT
+email-validator
 
 # Machine Learning
 tensorflow>=2.13.0
@@ -44,6 +45,11 @@ python-dotenv
 pydantic>=2.0.0
 python-multipart
 aiofiles
+pypdf
+python-docx
+slowapi
+python-magic
+python-magic-bin; sys_platform == 'win32'
 
 # Testing
 pytest
