--- a/cyber-sensei/frontend/Dockerfile
+++ b/cyber-sensei/frontend/Dockerfile
@@ -1,5 +1,5 @@
 # frontend/Dockerfile
-FROM node:20-alpine AS build
+FROM node:20-slim AS build
 WORKDIR /app
 ARG VITE_API_URL
 ARG VITE_WS_URL
@@ -10,7 +10,7 @@ RUN npm ci
 COPY . .
 RUN npm run build
 
-FROM node:20-alpine
+FROM node:20-slim
 WORKDIR /app
 RUN npm install -g serve
 COPY --from=build /app/dist ./dist
