--- a/cyber-sensei/backend/requirements.txt
+++ b/cyber-sensei/backend/requirements.txt
@@ -35,6 +35,7 @@ tensorflow>=2.13.0
 tensorflow-hub>=0.14.0
 numpy>=1.24.0
 scikit-learn>=1.3.0
+protobuf<4.0.0
 
 # Logging & Monitoring
 elasticsearch>=8.0.0
