--- a/cyber-sensei/frontend/package.json
+++ b/cyber-sensei/frontend/package.json
@@ -39,10 +39,7 @@
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "jsdom": "^27.2.0",
-    "vite": "npm:rolldown-vite@7.1.14",
+    "vite": "^5.0.0",
     "vitest": "^3.0.0"
-  },
-  "overrides": {
-    "vite": "npm:rolldown-vite@7.1.14"
   }
 }
