--- a/cyber-sensei/backend/requirements.txt
+++ b/cyber-sensei/backend/requirements.txt
@@ -24,18 +24,18 @@ openai-whisper
 ffmpeg-python
 
 # Authentication & Security
-python-jose[cryptography]
+python-jose[cryptography]==3.3.0
 passlib[bcrypt]
 pydantic-settings
 PyJWT
 email-validator
 
 # Machine Learning
-tensorflow>=2.13.0
-tensorflow-hub>=0.14.0
-numpy>=1.24.0
+tensorflow==2.15.0
+tensorflow-hub>=0.15.0
+numpy>=1.24.3
 scikit-learn>=1.3.0
-protobuf<4.0.0
+protobuf>=3.20.3
 
 # Logging & Monitoring
 elasticsearch>=8.0.0
