feat: Add audit report, fixes summary, and update core functionality across backend and frontend

--- a/cyber-sensei/.gitignore
+++ b/cyber-sensei/.gitignore
@@ -21,6 +21,11 @@ venv/
 *.sqlite
 *.sqlite3
 
+# ChromaDB knowledge base (runtime-generated, should not be versioned)
+data/knowledge_db/
+**/data/knowledge_db/
+backend/data/knowledge_db/
+
 # Environment
 .env
 .env.local
