--- a/cyber-sensei/backend/alembic.ini
+++ b/cyber-sensei/backend/alembic.ini
@@ -3,7 +3,7 @@
 
 [alembic]
 # path to migration scripts
-sqlalchemy.url = driver://user:password@localhost/dbname
+# sqlalchemy.url is set dynamically from environment in env.py
 script_location = app/migrations
 sqlalchemy.echo = false
 sqlalchemy.echo_pool = false
