--- a/cyber-sensei/frontend/Dockerfile
+++ b/cyber-sensei/frontend/Dockerfile
@@ -6,13 +6,20 @@ ARG VITE_WS_URL
 ENV VITE_API_URL=${VITE_API_URL}
 ENV VITE_WS_URL=${VITE_WS_URL}
 COPY package*.json ./
-RUN npm ci
+RUN npm ci --legacy-peer-deps || npm ci
 COPY . .
 RUN npm run build
 
 FROM node:20-slim
 WORKDIR /app
-RUN npm install -g serve
+RUN npm install -g serve && \
+    apt-get update && apt-get install -y --no-install-recommends curl && \
+    rm -rf /var/lib/apt/lists/*
 COPY --from=build /app/dist ./dist
 EXPOSE 4173
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=20s --retries=3 \
+    CMD curl -f http://localhost:4173 || exit 1
+
 CMD ["serve", "-s", "dist", "-l", "4173"]
