--- a/cyber-sensei/backend/Dockerfile
+++ b/cyber-sensei/backend/Dockerfile
@@ -5,20 +5,33 @@ ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1 \
     PYTHONPATH=/app
 
-RUN apt-get update && apt-get install -y --no-install-recommends ffmpeg && \
-    rm -rf /var/lib/apt/lists/*
+# Install system dependencies
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    ffmpeg \
+    curl \
+    postgresql-client \
+    && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
+# Copy requirements first for better caching
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Copy application code
 COPY . .
+
+# Create necessary directories
+RUN mkdir -p /app/data /app/data/knowledge_db /app/data/transcripts /app/data/uploads /app/logs
 
 # Make prestart script executable
 RUN chmod +x /app/scripts/prestart.sh
 
 EXPOSE 8000
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
+    CMD curl -f http://localhost:8000/health || exit 1
 
 # Use the prestart script as the command
 CMD ["/app/scripts/prestart.sh"]
