--- a/cyber-sensei/docker-compose.yml
+++ b/cyber-sensei/docker-compose.yml
@@ -1,4 +1,4 @@
-#version: '3.8'
+version: '3.8'
 
 x-common-variables: &common-variables
   DATABASE_URL: postgresql://postgres:postgres@postgres:5432/cyber_sensei
@@ -73,7 +73,13 @@ services:
     volumes:
       - ollama_data:/root/.ollama
     # Pull the model we want on startup
-    entrypoint: [ "/bin/sh", "-c", "ollama serve & sleep 5 && ollama pull llama3 && tail -f /dev/null" ]
+    entrypoint: [ "/bin/sh", "-c", "ollama serve & sleep 10 && ollama pull llama3 || echo 'Model pull failed, continuing anyway' && tail -f /dev/null" ]
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:11434/api/tags"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 60s
 
   # Our FastAPI backend application
   backend:
@@ -82,6 +88,12 @@ services:
       - "8000:8000"
     volumes:
       - ./data:/app/data # Mount the data directory to persist the DB and uploads
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
     environment:
       - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/cyber_sensei
       - REDIS_URL=redis://redis:6379/0
@@ -131,15 +143,21 @@ services:
     build:
       context: ./frontend
       args:
-        - VITE_API_URL=http://localhost:8000/api
-        - VITE_WS_URL=ws://localhost:8000
+        - VITE_API_URL=http://backend:8000/api
+        - VITE_WS_URL=ws://backend:8000
     ports:
       - "3000:4173"
     environment:
       - VITE_API_URL=http://localhost:8000/api
       - VITE_WS_URL=ws://localhost:8000
     depends_on:
-      - backend
+      backend:
+        condition: service_started
+    healthcheck:
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:4173"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   # Celery worker
   worker:
